# skrin

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
.sqlx/: query-03b16884131493ceccfc3291a7ecb458da56fd361b549878a5737aab5bd97fb9.json  query-5a34a1ff9a7e5a8c52c9c57e68d80d438b369f9b195350bee1e4f48b7e24e8ad.json  query-79038e07acb10d21fe77ceda358a66a87df8d4f428d0c96dc70452eb111a0f31.json  query-97e35ce377318181d50b2cdef0093d8acc1768ee5acdec8fe5029782d9bb1e5c.json  query-9adee7b2c5cb4106dce75eb3c3e542e46826db5cfbe1eb96a528a25cc26ce16c.json  query-9bd32728b50ef11ad4f3b2233a266384a4dab1670534668d9e7e7633c95ab378.json  query-a7060800a6db744b01d2050cf9f0c3290564a98e6f3f50346f66a1f4dfdae003.json  query-e0b176ed415ed85fa2cd364b972453502011e4f846f340c759779b8986444ea8.json  query-f93d11542b25fd28b40cd6a5dcbd893c4fc3c68693c2e5533976549fca0da930.json
frontend/: app.html  index.html
migrations/: 20260129000001_initial.sql
src/: config.rs  error.rs  main.rs  state.rs
src/db/: operations.rs
src/middlewares/: auth.rs
src/models/: file_query.rs  image.rs  mod.rs  response.rs  stats.rs  token.rs
src/telegram/: mod.rs
src/utils/: detect_format.rs  gen_id.rs  get_token.rs  key_extractor.rs  mod.rs
src/web/: handlers.rs  routes.rs
upload/: IMG_2061.MOV
